@@ -146,7 +146,7 @@ The keypad provides access to a simple traditional number pad and as well as mor
 </figure>
 </para>
 <para>
-The top buttons (from left to right) switches between exact and approximate calculation, changes fractional number display, selects display mode and selects number base in result (see <xref linkend="qalculate-mode"/>).
+The top buttons (from left to right) switches between exact and approximate calculation, changes rational number form, selects display mode and selects number base in result (see <xref linkend="qalculate-mode"/>).
 </para>
 <para>
 The buttons on the right provides the following sets of functionality:
@@ -596,8 +596,8 @@ The menus in the menu bar provides access to most of the functionality of &app;.
 				<entry><para>Submenu which selects numerical display mode. See <xref linkend="qalculate-mode"/>.</para></entry>
 			</row>
 			<row valign="top">
-				<entry><para>Fractional Display</para></entry>
-				<entry><para>Submenu which selects decimal, fractional or combined fractional display. See <xref linkend="qalculate-mode"/>.</para></entry>
+				<entry><para>Rational Number Form</para></entry>
+				<entry><para>Submenu which switches between display of rational numbers as fractions or decimal numbers. See <xref linkend="qalculate-mode"/>.</para></entry>
 			</row>
 			<row valign="top">
 				<entry><para>Interval Display</para></entry>
@@ -1282,9 +1282,9 @@ If <quote>to</quote> is not preceded by an expression, the previous result will 
 		</para></listitem>
 	</varlistentry>
 	<varlistentry>
-		<term>Fractional Display</term>
+		<term>Rational Number Form</term>
 		<listitem><para>
-			This controls if numbers are displayed in fractional or decimal mode. Decimal mode displays numbers as usually expected (<quote>6/4 = 1.5</quote>), combined displays a whole number and a fraction (<quote>6/4 = 1 1/2</quote>) and fractional only displays as fraction (<quote>6/4 = 3/2</quote>).
+			This controls if rational numbers are displayed as fractions or not. The exact decimal fraction mode displays the number as a simple fraction, if the rational number does not have an exact decimal representation. The rational number <quote>4/3</quote> is displayed as <quote>1.3333333</quote> (or <quote>1.333…</quote> if indicate repeating decimals is activated) in decimal fractions mode, as <quote>4/3</quote> in both exact decimal fractions and simple fractions mode, and as <quote>1 + 1/3</quote> in mixed fractions mode.
 		</para></listitem>
 	</varlistentry>
 	<varlistentry>
@@ -1739,7 +1739,7 @@ Among units, &app; has support for currencies with up-to-date exchange rates. Cu
 Expressions can be converted to a specific unit directly in the expression entry with the <quote>to</quote> operator, which converts the left-hand expression (or the previous result) to a specified unit (e.g. <quote>5 feet + 2 inches to cm</quote> converts the result of <quote>5 feet + 2 inches</quote> to centimeters and displays it). Unit expressions may only contain units, prefixes, exponents, multiplication and division. By default, no prefix will be added to units typed without prefix, but this behavior can be modified by putting a question mark in front of the unit expression (<quote>6 561 ft to m ≈ 2000 m</quote> but <quote>6 561 ft to ?m ≈ 2 km</quote>). Type <quote>to optimal</quote> to get optimal unit, <quote>to base</quote> for base units, or <quote>to mixed</quote> to force the use of mixed units (see below). Other elements are ignored (except <quote>bin</quote>, <quote>oct</quote> and <quote>hex</quote>). 
 </para>
 <para>
-The unit conversion view can also be used. It is shown when pressing <guilabel>Conversion</guilabel>, <keycombo><keycap>Ctrl</keycap><keycap>C</keycap></keycombo>, <menuchoice><guimenu>Edit</guimenu><guimenuitem>Convert To Unit Expression...</guimenuitem></menuchoice> or <keycombo><keycap>Ctrl</keycap><keycap>T</keycap></keycombo> (the last two options moves to focus to the unit expression entry). Enter a unit expression in the text entry and press <keycap>Enter</keycap> (or click <guibutton>Convert</guibutton>), or select a unit from the list. An appropriate unit category will automatically be selected from units in the current result. If <guibutton>Continuous expression</guibutton> is checked subsequent results will automatically be converted, and if <guibutton>Set missing prefixes</guibutton> the optimal prefix will be set for unit expressions without any prefix. A unit can be inserted directly into the expression entry from the list by middle click selection or using the context menu.
+The unit conversion view can also be used. It is shown when pressing <guilabel>Conversion</guilabel>, <keycombo><keycap>Ctrl</keycap><keycap>C</keycap></keycombo>, <menuchoice><guimenu>Edit</guimenu><guimenuitem>Convert To Unit Expression...</guimenuitem></menuchoice> or <keycombo><keycap>Ctrl</keycap><keycap>T</keycap></keycombo> (the last two options moves to focus to the unit expression entry). Enter a unit expression in the text entry and press <keycap>Enter</keycap> (or click <guibutton>Convert</guibutton>), or select a unit from the list. An appropriate unit category will automatically be selected from units in the current result. If <guibutton>Continuous expression</guibutton> is checked subsequent results will automatically be converted, and if <guibutton>Add prefix</guibutton> the optimal prefix will be set for unit expressions without any prefix. A unit can be inserted directly into the expression entry from the list by middle click selection or using the context menu.
 <figure id="qalculate-FIG-unit-conversion">
 	<title>Unit Conversion View</title>
 	<screenshot>
