@@ -1,3 +1,7 @@
+2019-03-04 Hanna Knutsson <hanna.knutsson@protonmail.com>
+
+	* Layout fixes when formatting "= approx. 'a'"
+
 2019-03-02 Hanna Knutsson <hanna.knutsson@protonmail.com>
 
 	* Two's complement for hexadecimal
